WIP: hw1 answers

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -296,12 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "822e4b53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected character after line continuation character (3908690574.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdisplay(Math(p(a\\INTERSECTIONb) = p(a) * p(b)))\u001b[39m\n                     ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unexpected character after line continuation character\n"
+     ]
+    }
+   ],
    "source": [
-    "# no idea which laws were introduced? "
+    "# on paper, will uplooad photo"
    ]
   },
   {
@@ -380,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ce165c01",
    "metadata": {},
    "outputs": [
@@ -390,16 +399,17 @@
      "text": [
       "\"Automatic floor sweeping robot: seems sensible intuitively to train with RL, as one can \n",
       "      get feedback from the environment over time\n",
-      "One can imagine the room as a grid, and then, possible actions is movement in any\n",
-      "      direction in R2, as in along x, y in pos/negative dir. Further, reward will be if\n",
-      "      the result of movement is new mass inside robot(assuming it can detect if it cleans dust\n",
-      "      by measuring acumilation of dust in \"stomach\") \n",
-      "Control problem, as because the robot is learning a policy to maximize cumulative reward. \n",
-      "      more formally, the model is learning a a mapping from states to actions, \n",
-      "      that max expected reward.\n",
-      "Would still see the main problem as a control problem?)\n",
-      "       \n",
-      "probably by comparing total regret\n"
+      "for states: position(robot), either wrt. x,y, axis or polar coordinates, tile(floor) can be dirty/clean, battery? \n",
+      "      for actions: movement along axis or wrt. angle/r(lenght) \n",
+      "      rewards: + for tile cleaned, - for no change/visiting cleaned tile,  large - for collisions \n",
+      "This is a control problem\n",
+      "Given successful training, and now comparing against another robot, the problem becomes an production problem as we are now\n",
+      "      evalutaing how good the performance is compared to another agent\n",
+      "most likely compare total area cleaned / time spent - some collision penalty\n",
+      "The other robot was probably trained with a higher penalty for time spent, and lower penalty for colliding, incentivizing \n",
+      "      it to move from state to state more reclessly, with less regard for collisions as long as it cleaned states fasterr\n",
+      "\" This implies a environment change, which intuitively has less penalty for collisions but bigger space to clean, \n",
+      "      which i would think of as worse for my robot given last tasks comparison\n"
      ]
     }
    ],
@@ -411,25 +421,108 @@
     "\n",
     "#2. states, actions, rewards: \n",
     "\n",
-    "print(f\"\"\"One can imagine the room as a grid, and then, possible actions is movement in any\n",
-    "      direction in R2, as in along x, y in pos/negative dir. Further, reward will be if\n",
-    "      the result of movement is new mass inside robot(assuming it can detect if it cleans dust\n",
-    "      by measuring acumilation of dust in \"stomach\") \"\"\") # can def be more precise \n",
+    "print(f\"\"\"for states: position(robot), either wrt. x,y, axis or polar coordinates, tile(floor) can be dirty/clean, battery? \n",
+    "      for actions: movement along axis or wrt. angle/r(lenght) \n",
+    "      rewards: + for tile cleaned, - for no change/visiting cleaned tile,  large - for collisions \"\"\") # can def be more precise \n",
     "\n",
-    "#3. planning, pred of control problem? \n",
+    "#3. \n",
+    "print(f\"This is a control problem\")  # think evaluating what action to take given current state \n",
     "\n",
-    "print(f\"\"\"Control problem, as because the robot is learning a policy to maximize cumulative reward. \n",
-    "      more formally, the model is learning a a mapping from states to actions, \n",
-    "      that max expected reward.\"\"\") \n",
+    "#4.\n",
+    "print(f\"\"\"Given successful training, and now comparing against another robot, the problem becomes an production problem as we are now\n",
+    "      evalutaing how good the performance is compared to another agent\"\"\")\n",
     "\n",
-    "#4. comp vs a competitor, does this change the problem? \n",
+    "#5. metric for comparison:\n",
+    "print(f\"\"\"most likely compare total area cleaned / time spent - some collision penalty\"\"\")\n",
     "\n",
-    "print(f\"\"\"Would still see the main problem as a control problem?) \n",
-    "       \"\"\")   #wrong, change! \n",
+    "#6, other robot performes better but collides more, why? \n",
+    "print(f\"\"\"The other robot was probably trained with a higher penalty for time spent, and lower penalty for colliding, incentivizing \n",
+    "      it to move from state to state more reclessly, with less regard for collisions as long as it cleaned states fasterr\"\"\")\n",
     "\n",
-    "#5. Metric to compare the two robots?\n",
+    "#7 concerns with my robot not being competetive enough, change to factories instead of homes? \n",
+    "print(f\"\"\"\" This implies a environment change, which intuitively has less penalty for collisions but bigger space to clean, \n",
+    "      which i would think of as worse for my robot given last tasks comparison\"\"\")\n",
     "\n",
-    "print(f\"\"\"probably by comparing total regret\"\"\")"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32fb0c5e",
+   "metadata": {},
+   "source": [
+    "Exercise 5, RL assumptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "638d38ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " my take on an artificial interviewing agent: \n",
+      "      defining the rewards are not easy? and definitions might be severely biased?\n",
+      "      probably better with a supervised machine learrning approach.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Task 1, reinforcement learning for streamlining the interview process? \n",
+    "print(f\"\"\" my take on an artificial interviewing agent: \n",
+    "      defining the rewards are not easy? and definitions might be severely biased?\n",
+    "      probably better with a supervised machine learrning approach.\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6051a26",
+   "metadata": {},
+   "source": [
+    "3. Multi-armed Bandits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cdf13b4",
+   "metadata": {},
+   "source": [
+    "ex.6."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3293745c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The question here is if one considers MAB's a sensible choice to design deployment of new medicines. \n",
+    "print(f\"\"\"if the question is asking whether one can judge deployment of medicines with MAB's,\n",
+    "      then i would say you are to some extent already doing so, as MAB's is simply estimating reward(sucess) of each slot, \n",
+    "      only one hopefully does it on rodents etc before deployment. Using MAB's if the slots(vaccines) are tested(sampled) on hyumans,\n",
+    "      it would be reasonable to argue that its unethical\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e68994fd",
+   "metadata": {},
+   "source": [
+    "Ex7. Hoeffdings ineq. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbac7576",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculation on paper, will upload photo\n"
    ]
   }
  ],
