--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e3ff0dab",
+   "metadata": {},
+   "source": [
+    "## 2.1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f46400b",
+   "metadata": {},
+   "source": [
+    "![Photo description](photos/IMG_2849.jpeg)\n",
+    "The following photo shows how the 2 probability laws in class can be rewritten into bayes identity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ea60921",
    "metadata": {},
    "source": [
@@ -67,6 +84,23 @@
     "from bandit import Bandits_one\n",
     "\n",
     "SEED = 42"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42c7293f",
+   "metadata": {},
+   "source": [
+    "# 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba93a620",
+   "metadata": {},
+   "source": [
+    "![Photo description](photos/IMG_2848.jpeg)\n",
+    "The probability of underestimating the true expected value by u = 0.01, u = 0.1 and u = 0.5"
    ]
   },
   {
@@ -658,9 +692,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "INF161",
+   "display_name": ".venv",
    "language": "python",
-   "name": "inf161"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -672,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
