--- a/notebook_endre.ipynb
+++ b/notebook_endre.ipynb
@@ -13,11 +13,26 @@
    "execution_count": null,
    "id": "74d591d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution of the Sum of Rewards P(R+S):\n",
+      "Sum of Rewards     Probability    \n",
+      "-----------------------------------\n",
+      "$0                 0.1050 (10.50%)\n",
+      "$5                 0.2125 (21.25%)\n",
+      "$10                0.2850 (28.50%)\n",
+      "$15                0.1775 (17.75%)\n",
+      "$20                0.1225 (12.25%)\n",
+      "$25                0.0500 (5.00%)\n",
+      "$30                0.0425 (4.25%)\n",
+      "$40                0.0050 (0.50%)\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Slot machine reward distribution\n",
     "rewards = [0, 5, 10, 20]  # Dollar amounts\n",
     "probabilities = [0.35, 0.3, 0.25, 0.1]  # Probabilities\n",
@@ -181,13 +196,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from bandit import Bandits_one\n",
     "SEED = 42"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f4dedc31",
    "metadata": {},
    "outputs": [],
@@ -223,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8b5a3e27",
    "metadata": {},
    "outputs": [],
@@ -262,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "66c7d035",
    "metadata": {},
    "outputs": [],
@@ -310,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dd7f2a28",
    "metadata": {},
    "outputs": [
@@ -357,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "10ef9693",
    "metadata": {},
    "outputs": [
@@ -414,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3ee6ece0",
    "metadata": {},
    "outputs": [
@@ -480,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "93c672f2",
    "metadata": {},
    "outputs": [
@@ -488,13 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuning epsilon (eps-greedy):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Tuning epsilon (eps-greedy):\n",
       "0.01 -> 479.0\n",
       "0.1 -> 140.0\n",
       "0.3 -> 290.0\n",
@@ -565,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1330064b",
    "metadata": {},
    "outputs": [
@@ -615,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7c225db2",
    "metadata": {},
    "outputs": [
@@ -696,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "43d57f94",
    "metadata": {},
    "outputs": [
@@ -742,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e4e886e6",
    "metadata": {},
    "outputs": [
