--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2,19 +2,85 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e3ff0dab",
+   "id": "204cbe08",
    "metadata": {},
    "source": [
-    "## 2.1\n"
+    "### 1.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74d591d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution of the Sum of Rewards P(R+S):\n",
+      "Sum of Rewards     Probability    \n",
+      "-----------------------------------\n",
+      "$0                 0.1050 (10.50%)\n",
+      "$5                 0.2125 (21.25%)\n",
+      "$10                0.2850 (28.50%)\n",
+      "$15                0.1775 (17.75%)\n",
+      "$20                0.1225 (12.25%)\n",
+      "$25                0.0500 (5.00%)\n",
+      "$30                0.0425 (4.25%)\n",
+      "$40                0.0050 (0.50%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Slot machine reward distribution\n",
+    "rewards = [0, 5, 10, 20]  # Dollar amounts\n",
+    "probabilities = [0.35, 0.3, 0.25, 0.1]  # Probabilities\n",
+    "\n",
+    "#Second slot machine with new reward distribution\n",
+    "rewards2 = [0, 5, 10, 20]  # Dollar\n",
+    "probabilities2 = [0.3, 0.35, 0.3, 0.05]  # New Probabilities\n",
+    "\n",
+    "# Calculate the distribution of the sum\n",
+    "sum_distribution = {}\n",
+    "for r_reward, r_prob in zip(rewards, probabilities):\n",
+    "    for s_reward, s_prob in zip(rewards2, probabilities2):\n",
+    "        total = r_reward + s_reward\n",
+    "        prob = r_prob * s_prob\n",
+    "        if total not in sum_distribution:\n",
+    "            sum_distribution[total] = 0\n",
+    "        sum_distribution[total] += prob\n",
+    "\n",
+    "# Sort by total reward\n",
+    "sorted_sum = sorted(sum_distribution.items())\n",
+    "sum_totals = [x[0] for x in sorted_sum]\n",
+    "sum_probs = [x[1] for x in sorted_sum]\n",
+    "\n",
+    "print(\"Distribution of the Sum of Rewards P(R+S):\")\n",
+    "print(f\"{'Sum of Rewards':<18} {'Probability':<15}\")\n",
+    "print(\"-\" * 35)\n",
+    "for total, prob in sorted_sum:\n",
+    "    print(f\"${total:<17} {prob:.4f} ({prob:.2%})\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1f46400b",
+   "id": "798f6149",
    "metadata": {},
    "source": [
-    "![Photo description](photos/IMG_2849.jpeg)\n",
-    "The following photo shows how the 2 probability laws in class can be rewritten into bayes identity"
+    "### 1.14 (*)\n",
+    "\n",
+    "Since both slot machines are independent, the probability of the sum of both machines being more than 20 is:\n",
+    "P(R+S > 20 | R = 10) = P(S > 10) = P(S = 20) = 0.05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de3a0ea",
+   "metadata": {},
+   "source": [
+    "### 2"
    ]
   },
   {
@@ -55,11 +121,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3320eb40",
+   "metadata": {},
+   "source": [
+    "Exercise 4.2\n",
+    "\n",
+    "States: we can map the surfaces that needs to be cleaned as an x,y grid where each cell represents a part of the room. The state would then be the current position of the robot on this grid and which cells have been cleaned.\n",
+    "\n",
+    "Actions: The actions would be the possible movements the robot can make (up, down, left, right) and an action to vacuum the current cell.\n",
+    "\n",
+    "Rewards: The robot would recieve a positive reward for vacuuming a cell that is dirty and a small negative reward for each movement to encourage efficiency. As it is a house cleaning robot, we can also impose a negative reward for crashing into obstacles or walls."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "60a573c4",
    "metadata": {},
    "source": [
     "### 4.6\n",
     "The competing robot’s behaviour is likely related to how it was trained. If the reward function values  efficiency or speed while assigning no penalty to collisions, the robot may learn an aggressive policy that prioritizes coverage over safety. As a result, the robot may frequently hit obstacles because such behaviour is not penalized. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a7f02fb",
+   "metadata": {},
+   "source": [
+    "Exercise 4.6\n",
+    "\n",
+    "The reason for the competing robot crashing more, but performing better in other ways, can be that the competing firm has prioritized performance (time, efficient sweeping) over safety (avoiding crashes). \n",
+    "It could for example be that the competing robot drives faster, which increases the chance of crashing, but also allows it to finish the task quicker.\n",
+    "For sure the competing robot has a less negative reward for crashing, which leads it to adapt policies that crash more often."
    ]
   },
   {
@@ -72,35 +164,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e0867f51",
+   "cell_type": "markdown",
+   "id": "23a49f5b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "Exercise 5\n",
     "\n",
-    "from bandit import Bandits_one\n",
+    "We find the choice to use RL in this scenario inappropriate as it would face some ethical and practical challenges.\n",
+    "Firstly, RL typically requires a large number of interactions with the environment to learn an effective policy. This is ethically problematic as it would risk the first applicants to not be considered fairly, as the system would be learning and making mistakes during this period.\n",
     "\n",
-    "SEED = 42"
+    "Secondly, the recruitment process often involves subjective judgments and qualitative factors that are difficult to represent and incorporate into a reward function. E.g. it would be difficult to design well-structured reward functions that capture all relevant aspects of a candidate's potential. One could argue that you can create some kind of efficiency measure, but the data collection for this would likely take a long time and be very noisy.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42c7293f",
+   "id": "7b268adb",
    "metadata": {},
    "source": [
-    "# 7"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ba93a620",
-   "metadata": {},
-   "source": [
-    "![Photo description](photos/IMG_2848.jpeg)\n",
-    "The probability of underestimating the true expected value by u = 0.01, u = 0.1 and u = 0.5"
+    "Exercise 6. MABs\n",
+    "\n",
+    "Giving three different vaccines to the same population and gradually estimating which vaccine is the most efficient based on a relevant reward measure. To get these estimates you would need to use exploration vs exploitation strategies to make sure you get good estimates of each vaccine's efficiency. A good strategy would ensure that you gradually would shift towards giving the most efficient vaccine to the majority of the population and thus maximize your goal.\n",
+    "\n",
+    "This MAB approach can be more sensible than a RCT (randomized control trial) as it is adaptive and will gradually give more people the best vaccine. This can be crucial in for example a pandemic situation where you want to maximize the efficiency of the vaccine rollout as quickly as possible and not wait for the results of a full RCT before changing strategy.\n"
    ]
   },
   {
@@ -113,7 +199,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "3bceb64f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from bandit import Bandits_one\n",
+    "SEED = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "f4dedc31",
    "metadata": {},
    "outputs": [],
@@ -149,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8b5a3e27",
    "metadata": {},
    "outputs": [],
@@ -188,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "66c7d035",
    "metadata": {},
    "outputs": [],
@@ -236,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "dd7f2a28",
    "metadata": {},
    "outputs": [
@@ -283,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "10ef9693",
    "metadata": {},
    "outputs": [
@@ -340,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3ee6ece0",
    "metadata": {},
    "outputs": [
@@ -406,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "93c672f2",
    "metadata": {},
    "outputs": [
@@ -414,13 +513,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuning epsilon (eps-greedy):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Tuning epsilon (eps-greedy):\n",
       "0.01 -> 479.0\n",
       "0.1 -> 140.0\n",
       "0.3 -> 290.0\n",
@@ -491,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1330064b",
    "metadata": {},
    "outputs": [
@@ -541,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7c225db2",
    "metadata": {},
    "outputs": [
@@ -622,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "43d57f94",
    "metadata": {},
    "outputs": [
@@ -668,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e4e886e6",
    "metadata": {},
    "outputs": [
@@ -687,6 +780,26 @@
     "\n",
     "print(\"Expected rewards given G=0 (X,Y,Z):\", env0.means[0])\n",
     "print(\"Expected rewards given G=1 (X,Y,Z):\", env1.means[1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f56a378e",
+   "metadata": {},
+   "source": [
+    "### 8.12\n",
+    "\n",
+    "No, the optimal action is not the same for all patients. In Bandits_four(), the optimal medicine depends on the gene value G. When 𝐺=0, one medicine is optimal, while for 𝐺=1 a different medicine yields the highest expected reward. This differs from Bandits_three(), where the optimal action is the same for all episodes. The problem in Bandits_four() is therefore a contextual bandit problem, where the optimal policy depends on observed patient information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f48254f4",
+   "metadata": {},
+   "source": [
+    "### 8.13\n",
+    "\n",
+    "Since clinical studies confirm that the response of medicine X to the gene expression is linear, the expected reward for gene value 𝐺=0.5 can be estimated by linear interpolation between the expected rewards at 𝐺=0 and G=1.If the expected reward of X is 1 when G=0 and 3 when G=1, the estimated expected reward at G=0.5 is E[R∣X,G=0.5]=1+0.5(3−1)=2."
    ]
   }
  ],
