--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -85,6 +85,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8bc6224",
+   "metadata": {},
+   "source": [
+    "![Photo description](photos/IMG_2849.jpeg)\n",
+    "The derivation of bayes identity from the two probability laws presented in class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ea60921",
    "metadata": {},
    "source": [
@@ -187,6 +196,23 @@
     "Giving three different vaccines to the same population and gradually estimating which vaccine is the most efficient based on a relevant reward measure. To get these estimates you would need to use exploration vs exploitation strategies to make sure you get good estimates of each vaccine's efficiency. A good strategy would ensure that you gradually would shift towards giving the most efficient vaccine to the majority of the population and thus maximize your goal.\n",
     "\n",
     "This MAB approach can be more sensible than a RCT (randomized control trial) as it is adaptive and will gradually give more people the best vaccine. This can be crucial in for example a pandemic situation where you want to maximize the efficiency of the vaccine rollout as quickly as possible and not wait for the results of a full RCT before changing strategy.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad76c0d7",
+   "metadata": {},
+   "source": [
+    "## 7."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0570f3a5",
+   "metadata": {},
+   "source": [
+    "![Photo description](photos/IMG_2848.jpeg)\n",
+    "The probabilities of underestimating the expected rewards by u= : 0.01, 0.1, 0.5"
    ]
   },
   {
