--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "source": [
     "![Photo description](photos/IMG_2849.jpeg)\n",
-    "The derivation of bayes identity from the two probability laws presented in class"
+    "The derivation of bayes identity from the two probability laws presented in class. You simply substitute the RHS part of eq(2) into the RHS of eq(1) which yields bayes formula. The other directions also follow from substitution. "
    ]
   },
   {
