--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "74d591d2",
    "metadata": {},
    "outputs": [
@@ -69,9 +69,10 @@
    "id": "798f6149",
    "metadata": {},
    "source": [
-    "### 1.14 (*)\n",
+    "### 1.14\n",
     "\n",
     "Since both slot machines are independent, the probability of the sum of both machines being more than 20 is:\n",
+    "\n",
     "P(R+S > 20 | R = 10) = P(S > 10) = P(S = 20) = 0.05"
    ]
   },
@@ -80,7 +81,7 @@
    "id": "4de3a0ea",
    "metadata": {},
    "source": [
-    "### 2"
+    "### 2.1"
    ]
   },
   {
@@ -116,24 +117,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d8f1509",
-   "metadata": {},
-   "source": [
-    "### 4.2\n",
-    "\n",
-    "State: Potition in X,Y grid.\n",
-    "\n",
-    "Reward: +1 for each til cleaned, -0.2 for each move, -1 for crash\n",
-    "\n",
-    "Action: Up,Down,Right,Left"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3320eb40",
    "metadata": {},
    "source": [
-    "Exercise 4.2\n",
+    "### 4.2\n",
     "\n",
     "States: we can map the surfaces that needs to be cleaned as an x,y grid where each cell represents a part of the room. The state would then be the current position of the robot on this grid and which cells have been cleaned.\n",
     "\n",
@@ -148,16 +135,6 @@
    "metadata": {},
    "source": [
     "### 4.6\n",
-    "The competing robot’s behaviour is likely related to how it was trained. If the reward function values  efficiency or speed while assigning no penalty to collisions, the robot may learn an aggressive policy that prioritizes coverage over safety. As a result, the robot may frequently hit obstacles because such behaviour is not penalized. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a7f02fb",
-   "metadata": {},
-   "source": [
-    "Exercise 4.6\n",
-    "\n",
     "The reason for the competing robot crashing more, but performing better in other ways, can be that the competing firm has prioritized performance (time, efficient sweeping) over safety (avoiding crashes). \n",
     "It could for example be that the competing robot drives faster, which increases the chance of crashing, but also allows it to finish the task quicker.\n",
     "For sure the competing robot has a less negative reward for crashing, which leads it to adapt policies that crash more often."
@@ -177,7 +154,7 @@
    "id": "23a49f5b",
    "metadata": {},
    "source": [
-    "Exercise 5\n",
+    "### 5.1\n",
     "\n",
     "We find the choice to use RL in this scenario inappropriate as it would face some ethical and practical challenges.\n",
     "Firstly, RL typically requires a large number of interactions with the environment to learn an effective policy. This is ethically problematic as it would risk the first applicants to not be considered fairly, as the system would be learning and making mistakes during this period.\n",
@@ -191,8 +168,9 @@
    "id": "7b268adb",
    "metadata": {},
    "source": [
-    "Exercise 6. MABs\n",
+    "### 6.1 \n",
     "\n",
+    "MABs\n",
     "Giving three different vaccines to the same population and gradually estimating which vaccine is the most efficient based on a relevant reward measure. To get these estimates you would need to use exploration vs exploitation strategies to make sure you get good estimates of each vaccine's efficiency. A good strategy would ensure that you gradually would shift towards giving the most efficient vaccine to the majority of the population and thus maximize your goal.\n",
     "\n",
     "This MAB approach can be more sensible than a RCT (randomized control trial) as it is adaptive and will gradually give more people the best vaccine. This can be crucial in for example a pandemic situation where you want to maximize the efficiency of the vaccine rollout as quickly as possible and not wait for the results of a full RCT before changing strategy.\n"
@@ -203,7 +181,7 @@
    "id": "ad76c0d7",
    "metadata": {},
    "source": [
-    "## 7."
+    "## 7.1"
    ]
   },
   {
@@ -225,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3bceb64f",
    "metadata": {},
    "outputs": [],
@@ -539,7 +517,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuning epsilon (eps-greedy):\n",
+      "Tuning epsilon (eps-greedy):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0.01 -> 479.0\n",
       "0.1 -> 140.0\n",
       "0.3 -> 290.0\n",
@@ -831,9 +815,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "INF161",
    "language": "python",
-   "name": "python3"
+   "name": "inf161"
   },
   "language_info": {
    "codemirror_mode": {
@@ -845,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
