--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 85,
    "id": "74d591d2",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
     "# Sort by total reward\n",
     "sorted_sum = sorted(sum_distribution.items())\n",
     "sum_totals = [x[0] for x in sorted_sum]\n",
-    "sum_probs = [x[1] for x in sorted_sum]\n",
+    "sum_probs  = [x[1] for x in sorted_sum]\n",
     "\n",
     "print(\"Distribution of the Sum of Rewards P(R+S):\")\n",
     "print(f\"{'Sum of Rewards':<18} {'Probability':<15}\")\n",
@@ -203,20 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "3bceb64f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from bandit import Bandits_one\n",
-    "SEED = 42"
+    "from bandit import Bandits_one"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 87,
    "id": "f4dedc31",
    "metadata": {},
    "outputs": [],
@@ -252,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "id": "8b5a3e27",
    "metadata": {},
    "outputs": [],
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "id": "66c7d035",
    "metadata": {},
    "outputs": [],
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "id": "3ee6ece0",
    "metadata": {},
    "outputs": [
