--- a/notebook_endre.ipynb
+++ b/notebook_endre.ipynb
@@ -781,7 +781,7 @@
    "source": [
     "### 8.12\n",
     "\n",
-    "No, the optimal action is not the same for all patients. In Bandits_four(), the optimal medicine depends on the gene value G. When 𝐺=0, one medicine is optimal, while for 𝐺=1 a different medicine yields the highest expected reward. This differs from Bandits_three(), where the optimal action is the same for all episodes. The problem in Bandits_four() is therefore a contextual bandit problem, where the optimal policy depends on observed patient information."
+    "No, the optimal action is not the same for all patients. In Bandits_four(), the optimal medicine depends on the gene value G. When 𝐺=0, we see that medicine Z has the highest expected reward, while for 𝐺=1 medicine X yields the highest expected reward. This differs from Bandits_three(), where we do not take into account the different effectiveness on the different genes. Thus, the optimal arm in bandit_three() is always medicine with index 2. The problem in Bandits_four() is therefore a contextual bandit problem, where the optimal policy depends on observed patient information."
    ]
   },
   {
