--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -441,7 +441,12 @@
    "source": [
     "### 8.13\n",
     "\n",
-    "Since clinical studies confirm that the response of medicine X to the gene expression is linear, the expected reward for gene value 𝐺=0.5 can be estimated by linear interpolation between the expected rewards at 𝐺=0 and G=1.If the expected reward of X is 1 when G=0 and 3 when G=1, the estimated expected reward at G=0.5 is E[R∣X,G=0.5]=1+0.5(3−1)=2."
+    "From 8.11 we know that \n",
+    "Expected rewards given G=0 (X,Y,Z): [1.  2.  2.2]\n",
+    "Expected rewards given G=1 (X,Y,Z): [3.  1.  2.2]@\n",
+    "\n",
+    "Since the response of medicine X to the gene expression is linear, the expected reward for gene value 𝐺=0.5 can be estimated by linear interpolation between the expected rewards at 𝐺=0 and G=1.\n",
+    "As the expected reward of X is 1 when G=0 and 3 when G=1, the estimated expected reward at G=0.5 is 2."
    ]
   }
  ],
