Les gjennom Odd

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -431,7 +431,7 @@
    "source": [
     "### 8.12\n",
     "\n",
-    "No, the optimal action is not the same for all patients. In Bandits_four(), the optimal medicine depends on the gene value G. When 𝐺=0, one medicine is optimal, while for 𝐺=1 a different medicine yields the highest expected reward. This differs from Bandits_three(), where the optimal action is the same for all episodes. The problem in Bandits_four() is therefore a contextual bandit problem, where the optimal policy depends on observed patient information."
+    "No, the optimal action is not the same for all patients. In Bandits_four(), the optimal medicine depends on the gene value G. When 𝐺=0, we see that medicine Z has the highest expected reward, while for 𝐺=1 medicine X yields the highest expected reward. This differs from Bandits_three(), where we do not take into account the different effectiveness on the different genes. Thus, the optimal arm in bandit_three() is always medicine with index 2. The problem in Bandits_four() is therefore a contextual bandit problem, where the optimal policy depends on observed patient information."
    ]
   },
   {
@@ -442,8 +442,11 @@
     "### 8.13\n",
     "\n",
     "From 8.11 we know that \n",
+    "\n",
     "Expected rewards given G=0 (X,Y,Z): [1.  2.  2.2]\n",
-    "Expected rewards given G=1 (X,Y,Z): [3.  1.  2.2]@\n",
+    "\n",
+    "Expected rewards given G=1 (X,Y,Z): [3.  1.  2.2]\n",
+    "\n",
     "\n",
     "Since the response of medicine X to the gene expression is linear, the expected reward for gene value 𝐺=0.5 can be estimated by linear interpolation between the expected rewards at 𝐺=0 and G=1.\n",
     "As the expected reward of X is 1 when G=0 and 3 when G=1, the estimated expected reward at G=0.5 is 2."
