Minor tweaks to MAB_algorithms notebook

--- a/notebooks/homework1/MAB_algorithms.ipynb
+++ b/notebooks/homework1/MAB_algorithms.ipynb
@@ -730,7 +730,7 @@
    "id": "7b5685f0",
    "metadata": {},
    "source": [
-    "realistically, to estimate a new mean for gene expression equal to 0.5, one would have to do linear interpolation of the reward, meaning the reward dist will be 0.5*exp_reward(gene = 0) + 0.5*exp_reward(gene = 1), and then simulate with an algo(epsilon-greedy, deg, UCB etc).."
+    "realistically, to estimate a new mean for gene expression equal to 0.5, one would have to do linear interpolation of the reward, meaning the new reward will be 0.5*exp_reward(gene = 0) + 0.5*exp_reward(gene = 1), and then simulate with an algo(epsilon-greedy, deg, UCB etc).."
    ]
   }
  ],
